compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_to_function_call_works_with_argument_in_first_position_4.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  [1, 2, 3] |> wibble.wobble\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  [1, 2, 3] |> wibble.wobble
               ↑            
}


----- AFTER ACTION

pub fn main() {
  wibble.wobble([1, 2, 3])
}
