compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_to_pipe_with_function_returning_other_function.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  wibble(wobble)(woo)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble(wobble)(woo)
                 ↑   
}


----- AFTER ACTION

pub fn main() {
  woo |> wibble(wobble)
}
