compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_to_pipe_works_in_final_step_of_a_pipeline.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  wibble |> wobble(woo(1))\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble |> wobble(woo(1))
                   ↑      
}


----- AFTER ACTION

pub fn main() {
  wibble |> wobble(1 |> woo)
}
