compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__create_unknown_module_under_dev.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport wobble/woo"
---
----- BEFORE ACTION

import wobble/woo
              ↑  


----- AFTER ACTION

----- FILE OPERATIONS -----
- Create /dev/wobble/woo.gleam
