compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__destructure_argument_empty_tuple.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main(tuple: #()) {\n  todo\n}\n"
---
----- BEFORE ACTION

pub fn main(tuple: #()) {
            ↑            
  todo
}


----- AFTER ACTION

pub fn main(tuple: #()) {
  let #() = tuple
  todo
}
